# QCArchiveWebapps

./: .codecov.yml  .dockerignore  .flaskenv  .gitignore  .travis.yml  Dockerfile  Dockerfile_old  Procfile  README.md  boot.sh  config.py  docker-compose.yml  environment.yml  logging_config.py  logging_config.yml  mongo-init.js  package-lock.json  package.json  pyproject.toml  qcarchive_web.py  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
app/: __init__.py  assets.py
app/dash_apps/: dash_base.py  dash_converters.py
app/dash_apps/dash_example/: index.py  (+2 more)
app/data/: matt_sample.json
app/examples/: __init__.py  errors.py  views.py
app/main/: forms.py  views.py
app/static/: package.json
app/templates/: 404.html  ML_datasets.html  app_in_iframe.html  base.html  index.html  message_dialog.html  ml_datasets.html
devtools/: run-redis.sh  travis_before_install.sh
logs/: README.md
migrations/versions/: c19d74e33a47_.py
nginx/: Dockerfile  boot.sh
nginx/conf.d/: app.conf
qcarchive_webapps/: __init__.py  assets.py  config.py  dash_base.py  dash_converters.py  portal_client.py
qcarchive_webapps/main/: __init__.py  errors.py  views.py
qcarchive_webapps/ml_datasets/: __init__.py  views.py
qcarchive_webapps/reaction_viewer/: index.py
qcarchive_webapps/static/: jmol_colors.json
qcarchive_webapps/templates/: 403.html  500.html  base.html
requirements/: common.txt  dev.txt  docker.txt  heroku.txt  travis.txt
tests/: conftest.py  test_auth.py  test_client.py
(+36 files in other folders)
